# uc-intg-hdfury

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
tests/: __init__.py  conftest.py  test_client.py  test_models.py
uc_intg_hdfury/: __init__.py  __main__.py  config.py  device.py  driver.py  hdfury_client.py  media_player.py  models.py  remote.py  select_entities.py  sensor.py  setup.py  setup_flow.py
