[tool.poetry]
name = "uc-intg-hdfury"
version = "0.1.0"
description = "Unfolded Circle integration for HDFury devices."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "uc_intg_hdfury", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
ucapi==0.3.1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"